<resources>
    <string name="app_name">Pokedex</string>
    <string name="height">&lt;b>Height: &lt;/b>%1$s</string>
    <string name="weight">&lt;b>Weight: &lt;/b>%1$s</string>
    <string name="Description">%1$s</string>
    <string name="choose_pokedex">Swap Pokédex</string>
    <string name="settings">Settings</string>
    <string name="About">About</string>
    <string name="name">name</string>
    <string name="desc_title">desc title</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="weakness">Weakness</string>
    <string name="prev_evolution">Prev Evolution</string>
    <string name="next_evolution">Next Evolution</string>

</resources>
