<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PokemonDetail">
        
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@android:color/white"
            >

            <androidx.core.widget.NestedScrollView
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:padding="16dp"
                    android:scrollbars="vertical"
                    android:layout_marginTop="80dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/name"
                        android:text="@string/name"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:id="@+id/description"
                        android:text="@string/description"
                        android:minLines="1"
                        android:ellipsize="end"
                        android:textAlignment="center"
                        android:maxLines="10"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>

                    <LinearLayout
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:paddingStart="45dp"
                            android:paddingEnd="45dp"
                            android:id="@+id/height"
                            android:text="@string/height"
                            android:layout_marginBottom="10dp"
                            android:textSize="16sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:id="@+id/weight"
                            android:text="@string/weight"
                            android:layout_marginBottom="10dp"
                            android:textSize="16sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>


                    <TextView
                        android:text="@string/type"
                        android:layout_marginBottom="10dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_type"
                        android:layout_width="match_parent"
                        android:layout_height="40dp">

                    </androidx.recyclerview.widget.RecyclerView>


                    <TextView
                        android:text="@string/weakness"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_weakness"
                        android:layout_width="match_parent"
                        android:layout_height="40dp">

                    </androidx.recyclerview.widget.RecyclerView>


                    <TextView
                        android:text="@string/prev_evolution"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_prev_evolution"
                        android:layout_width="match_parent"
                        android:layout_height="40dp">

                    </androidx.recyclerview.widget.RecyclerView>


                    <TextView
                        android:text="@string/next_evolution"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_next_evolution"
                        android:layout_width="match_parent"
                        android:layout_height="40dp">

                    </androidx.recyclerview.widget.RecyclerView>


                </LinearLayout>

            </androidx.core.widget.NestedScrollView>


        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/pokemon_image"
            android:layout_alignTop="@+id/card_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-40dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            tools:ignore="ContentDescription" />

</RelativeLayout>